--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MindfulMe - Student Mental Wellness Companion</title>
+    <title>Antara – Strength Begins Within</title>
     <meta name="description" content="A supportive mental wellness companion for students. Track moods, journal thoughts, and grow your mindfulness practice." />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="MindfulMe - Student Mental Wellness Companion" />
+    <meta property="og:title" content="Antara – Strength Begins Within" />
     <meta property="og:description" content="A supportive mental wellness companion for students. Track moods, journal thoughts, and grow your mindfulness practice." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
